<resources>
    <string name="app_name">CodeTest</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Create User</string>
    <string name="action_sign_in_exist">Get User\'s Answers</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_activity_questions">Questions</string>
    <string name="title_activity_results">Results</string>
    <string name="user_result_title">User %s results</string>
    <string name="user_result_score">%d%% probability</string>
    <string name="user_questions_title">User\'s Questions and Answers</string>
    <string name="alert_missingAnswers_title">Missing Answers</string>
    <string name="alert_missingAnswers_msg">You haven\'t answered all the questions yet!\nPlease make sure to provide all answers before getting the results!</string>
    <string name="alert_btn_OK">OK</string>
</resources>
